<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.fizteh.fivt.students</groupId>
    <artifactId>parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>fizteh-java-2015</name>
    <url>https://github.com/akormushin/fizteh-java-2015</url>

    <ciManagement>
        <system>Travis CI</system>
        <url>https://travis-ci.org/akormushin/fizteh-java-2015</url>
    </ciManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>egiby</module>
        <module>akormushin</module>
        <!--Add you module here-->
    	<module>okalitova</module>
        <module>xmanatee</module>
        <module>mamaevads</module>
        <module>cache-nez</module>
        <module>ocksumoron</module>
        <module>zerts</module>
        <module>thefacetakt</module>
        <module>loulett</module>
        <module>riazanovskiy</module>
        <module>andrewgark</module>
        <module>fminkin</module>
        <module>sergmiller</module>
        <module>zakharovas</module>
        <module>zemen</module>
		<module>w4r10ck1337</module>
		<module>preidman</module>
		<module>Jettriangle</module>
        <module>nmakeenkov</module>
        <!--Add you module here-->
	<module>oshch</module>
        <module>ladyae</module>
    <module>nikitarykov</module>
    <module>duha666</module>
  </modules>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>1.10.19</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.tngtech.java</groupId>
            <artifactId>junit-dataprovider</artifactId>
            <version>1.10.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.2</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>2.16</version>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <configuration>
                            <configLocation>checkstyle.xml</configLocation>
                            <encoding>UTF-8</encoding>
                            <consoleOutput>true</consoleOutput>
                            <failsOnError>true</failsOnError>
                        </configuration>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>6.10.1</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>

    <scm>
        <url>https://github.com/akormushin/fizteh-java-2015.git</url>
        <connection>scm:git:ssh://git@github.com/fizteh-java-2015.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/fizteh-java-2015.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

</project>
